# MCU

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  FW-Size-Performance.txt  FW-Size-Size.txt  README.md  esp_idf_project_configuration.json  indexClient.html  partitions-ESP32.csv  partitions.csv  platformio.ini  script.js  settings.html  size-components.txt  size-components1.txt  size-files1.txt  size.txt  size1.txt  style.css
EPDL/: CMakeLists.txt
EPDL/src/: EPDL.cpp  EPDL.h  ImageData.cpp
HTTP-Test-Server/: app.py  index.html
MCU/: CMakeLists.txt
MCU/src/: Clock.cpp  ESP32S3SPI.h  Filesystem.cpp  GPIO.cpp  MCU.cpp  SPI.cpp
arduino/PNGDecode/: DEV_Config.h  PNGDecode.ino  RGB565 Testbild  test.afdesign
components/ConfigManager/: CMakeLists.txt
components/magic_enum/: CMakeLists.txt
components/spdlog/: CMakeLists.txt
data/: config.json
data/html/: index.html  (+1 more)
include/: AppConfig.h  AppDefault.h  AppFailsafe.h  AppNetwork.h  AppServer.h  AppStandalone.h  Application.h  Clock.h  Config.h  EPDL.h  HTTPServer.h  Log.h  RLEObject.h
main/: CMakeLists.txt  LoggingUtils.h  MCU_main.cpp  hello_world_main.cpp
main/Application/: AppDefault.cpp  AppDefault.h  AppNetwork.cpp  AppNetwork.h  AppStandalone.cpp  AppStandalone.h  Application.cpp  Application.h
main/HTTPServer/: HTTPServer.cpp  HTTPServer.h  ServerVariable.cpp  ServerVariable.h
src/: AppConfig.cpp  AppDefault.cpp  AppFailsafe.cpp  AppNetwork.cpp  AppServer.cpp  AppStandalone.cpp  Application.cpp  Clock.cpp  Config.cpp  EPDL.cpp  HTTPServer.cpp  ImageData.c  Log.cpp  main.cpp
test/: ImageData.cpp  ImageData.h  TestFrameBuffer.cpp
www/: app.py  index.html  indexClient.html  script.js  settings.html  style.css
(+135 files in other folders)
